# device_soc_bestechnic

./: BUILD.gn  besdiff.diff
aos_bsp/bthost/adapter/inc/adapter_service/: a2dp_service.h  adapter_service.h  app_ble_test.h  app_bt_cmd.h  avrcp_service.h  bap_service.h  besbt_cfg.h  bt_rom_init.h  bth_rom_init.h  gaf_service.h  gap_service.h  gatt_service.h  hci_service.h  hci_transport.h  hfp_service.h  hid_service.h  l2cap_service.h  map_service.h  spp_service.h
aos_bsp/bthost/stack/bt_profiles/inc/: a2dp_i.h  avrcp_i.h  bes_os.h  btgatt.h  btm_i.h  btm_mediator.h  co_ppbuff.h  co_timer.h  cobuf.h  dip_i.h  hci_i.h  hfp_i.h  l2cap_i.h  map_i.h  obex_i.h  pan_i.h  pbap_i.h  rfcomm_i.h  sdp_i.h
aos_bsp/net/: net_main.h
aos_bsp/net/ftp_client/: ftp_client.h
aos_bsp/net/wifi/: bwifi_event.h  bwifi_hal.h  bwifi_interface.h  bwifi_p2p_interface.h  wifi_def.h  wifi_mac_ind.h  wifi_p2p.h
aos_bsp/net/wifi/best2003/: wifi_def_best2003.h
aos_bsp/net/wifi/wifi_host_sdio/: wifi_host_download.h
aos_bsp/net/wifi_stack/v1/core/: net_mgmt.h
aos_bsp/net/wifi_stack/v1/lwip/: lwiphooks.h
aos_bsp/platform/cmsis/inc/: best1000.h  best1306.h  best1501.h  best1501simu.h  best1502x.h  best1502x_sens.h  best1503.h  best1600.h  best1600simu.h  best1603_bth.h  best1603_sens.h  best1700.h  best1700_bth.h  best2000.h  best2001.h  best2002.h  best2003.h  best2005.h  best2007.h  best2007p.h  best2007p_csp.h  best2009.h  best2300.h  best2300a.h  cmsis.h  cmsis_armclang.h  cmsis_nvic.h  core_cm33.h  core_cm4.h  core_cm55.h  dwt.h  fpga1000.h  l2c_310.h  link_sym_armclang.h  mpu.h  mpu_armv7.h  mpu_armv8.h  mpu_cfg.h  partition_ARMCM.h  reloc_run.h  (+2 more)
aos_bsp/platform/drivers/ana/: pmu.h
aos_bsp/platform/drivers/ana/best2003/: analog_best2003.h  pll_best2003.h  pmu_best2003.h  psramphy_best2003.h  reg_pmu_best2003.h  reg_psramphy_best2003.h  (+1 more)
aos_bsp/platform/hal/: hal_aud.h  hal_bootmode.h  hal_btdump.h  hal_cache.h  hal_checksum.h  hal_cmd.h  hal_cmu.h  hal_codec.h  hal_cpudump.h  hal_csi.h  hal_dma.h  hal_dma2d.h  hal_dsi.h  hal_evr.h  hal_fullmap_mmu.h  hal_gamu.h  hal_gpio.h  hal_i2c.h  hal_i2cip.h  hal_i2s.h  hal_i2sip.h  hal_i3c.h  hal_intersys.h  hal_iomux.h  hal_ipc.h  hal_ipc_msg.h  hal_ipc_notify.h  hal_l2cache.h  hal_lcdc.h  hal_lcdc_qspi.h  hal_location.h  hal_mcu2cp.h  hal_memsc.h  hal_norflash.h  hal_norflaship.h  hal_overlay.h  hal_overlay_subsys.h  hal_page_spy.h  hal_phyif.h  hal_png.h  (+30 more)
aos_bsp/platform/hal/best2003/: hal_cmu_best2003.h  hal_dmacfg_best2003.h  hal_iomux_best2003.h  hal_psc_best2003.h  hal_rmt_ipc_best2003.h  hal_sec_best2003.h  partition_best2003.h  plat_addr_map_best2003.h
aos_bsp/rtos/liteos/liteos_m/: target_config.h
aos_bsp/services/aiot/alsa_adapter/: alsa_extra.h
aos_bsp/services/aiot/factory/: factory_user_api.h
aos_bsp/services/aiot/ota_secboot/: ota_flash.h
aos_bsp/services/norflash_api/: norflash_api.h
aos_bsp/services/nv_section/factory_section/: factory_section.h
aos_bsp/tools/: best2003_liteos.mri  build_2003_liteos.sh
aos_bsp/utils/eshell/: eshell.h  eshell_grp.list
aos_bsp/utils/kfifo/: kfifo.h
bes2600/: BUILD.gn
bes2600/liteos_m/components/: BUILD.gn
bes2600/liteos_m/components/bt/: BUILD.gn
bes2600/liteos_m/components/bt/inc/: harmony_utils.h  ohos_bt_avrcp_controller.h  ohos_bt_gatt_utils.h  ohos_bt_utils.h
bes2600/liteos_m/components/bt/src/: harmony_api_test.c  harmony_ble_client.c  harmony_ble_gatt.c  harmony_ble_server.c  harmony_bt_a2dp_sink.c  harmony_bt_avrcp_ct.c  harmony_bt_gap.c  harmony_bt_hfp.c  harmony_bt_spp.c  harmony_utils.c  private_vendor_api.c
bes2600/liteos_m/sdk/: BUILD.gn
bes2600/liteos_m/sdk/tools/: build_lib_into_hmos_out.sh
bes2600/pack_tools/: genfs.sh  sig_bin.sh
hals/communication/wifi_lite/wifiservice/: wifi_device.c
hals/mbedtls/bes_config/: config_liteos_m.h
(+173 files in other folders)
