# Copyright (c) 2021 Bestechnic (Shanghai) Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/khdf/liteos_m/hdf.gni")

config("public") {
  include_dirs = [ "inc" ]
}

kernel_module("bt_adapter") {
  sources = [
    "src/harmony_bt_gap.c",
    "src/harmony_ble_gatt.c",
    "src/harmony_ble_client.c",
    "src/harmony_ble_server.c",
    "src/harmony_utils.c",
    "src/harmony_api_test.c"
  ]
  include_dirs = [
    "//device/soc/bestechnic/aos_bsp/utils/eshell/",
    "//device/soc/bestechnic/aos_bsp/bthost/stack/bt_profiles/inc",
    "//device/soc/bestechnic/aos_bsp/bthost/adapter/inc",
    "//device/soc/bestechnic/aos_bsp/bthost/adapter/inc/bt/common/",
    "//device/soc/bestechnic/aos_bsp/bthost/adapter/inc/adapter_service/",
    "//device/soc/bestechnic/aos_bsp/bthost/adapter/inc/bt/me/",
    "//device/soc/bestechnic/aos_bsp/services/nv_section/factory_section/",
    "//device/soc/bestechnic/bes2600/liteos_m/components/bt/inc/"
  ]
  defines = []

  cflags = []
}
